# arcana

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
docker/: run-worker.sh
docs/: session-report-2026-04-09.md
k8s/: chromadb.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  nats-stream.yaml  postgres.yaml  pvc-shared.yaml  secrets.yaml  workers.yaml
src/arcana/: __init__.py  config.py  log.py
src/arcana/gateway/: app.py  routes.py
src/arcana/gateway/templates/: base.html  documents.html  pipeline.html  query.html
src/arcana/models/: __init__.py  events.py  reports.py
src/arcana/orchestrator/: ingest.py  nats_dispatch.py  query.py  state.py
src/arcana/store/: database.py  documents.py  files.py  vectors.py
src/arcana/workers/: __main__.py  analyst.py  base.py  checker.py  embedder.py  extractor.py
tests/: conftest.py  test_analyst.py  test_checker.py  test_config.py  test_dispatch.py  test_embedder.py  test_extractor.py  test_files.py  test_gateway.py  test_models.py  test_orchestrator.py  test_store.py  test_vectors.py  test_workers.py
