[project]
name = "arcana"
version = "0.1.0"
requires-python = ">=3.11"
description = "Multi-agent research analyst pipeline"
dependencies = [
    "langgraph>=0.4",
    "langsmith>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-text-splitters>=0.3",
    "nats-py>=2.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.0",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.20",
    "chromadb>=1.0",
    "aiosqlite>=0.21",
    "pymupdf>=1.25",
    "httpx>=0.27",
]

[project.optional-dependencies]
prod = ["asyncpg>=0.30"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcana"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
